# TarPyt

./: README.md  meson.build  meson.options  tarpyt  tarpyt@.service.in  tarpyt@.socket.in
.github/workflows/: test.yml
test/: test_http.sh  test_smtp.sh  test_ssh.sh
